Fix not full content scroll bar visible

--- a/src/sticky-table.css
+++ b/src/sticky-table.css
@@ -34,6 +34,7 @@
   -ms-overflow-style: none;
 }
 .sticky-table .sticky-table-x-wrapper {
+  min-height: 100%;
   width: 100%;
   overflow-x: auto;
 }
